modernize-prd/payment-authen-proxy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payment-authen-proxy
  namespace: payment
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: 3600
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600s'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600s'
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header Accept-Encoding "";
    #  sub_filter '<head>' '<head> <base href="/my-webapp/">';
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: payment-authen-proxy.payment.atlantic.true.th
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: payment-authen-proxy
              servicePort: 80
# - path: /(.*)
#             backend:
#               serviceName: payment-authen-proxy
#               servicePort: 80
