modernize-prd/pmt-api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pmt-api
  namespace: payment
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60s"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600s"
spec:
  rules:
    - host: pmt-api.payment.atlantic.true.th
      http:
        paths:
          - path: /cash-management-service(/|$)(.*)
            backend:
              serviceName: cash-management-service
              servicePort: 80
          - path: /tsm-payment-service(/|$)(.*)
            backend:
              serviceName: tsm-payment-service
              servicePort: 80
          - path: /cash-report-service(/|$)(.*)
            backend:
              serviceName: cash-report-service
              servicePort: 80
          - path: /tsm-paymentreport-service(/|$)(.*)
            backend:
              serviceName: tsm-paymentreport-service
              servicePort: 80
          - path: /trm-cashmanagement-api-service(/|$)(.*)
            backend:
              serviceName: trm-cashmanagement-api-service
              servicePort: 80

          - path: /trm-autoreceipt-service(/|$)(.*)
            backend:
              serviceName: trm-autoreceipt-service
              servicePort: 80
          - path: /trm-sale-service(/|$)(.*)
            backend:
              serviceName: trm-sale-service
              servicePort: 80
          - path: /payment-tmnwallet-service(/|$)(.*)
            backend:
              serviceName: payment-tmnwallet-service
              servicePort: 80
          - path: /trm-afterpayment-service(/|$)(.*)
            backend:
              serviceName: trm-afterpayment-service
              servicePort: 80
          - path: /trm-aftersale-service(/|$)(.*)
            backend:
              serviceName: trm-aftersale-service
              servicePort: 80
          - path: /trm-common-service(/|$)(.*)
            backend:
              serviceName: trm-common-service
              servicePort: 80
          - path: /trm-dealer-service(/|$)(.*)
            backend:
              serviceName: trm-dealer-service
              servicePort: 80
          - path: /trm-bpmos-service(/|$)(.*)
            backend:
              serviceName: trm-bpmos-service
              servicePort: 80
          - path: /trm-report-service(/|$)(.*)
            backend:
              serviceName: trm-report-service
              servicePort: 80
          - path: /trm-reportexport-service(/|$)(.*)
            backend:
              serviceName: trm-reportexport-service
              servicePort: 80
          - path: /trm-sale-report-service(/|$)(.*)
            backend:
              serviceName: trm-sale-report-service
              servicePort: 80
          - path: /trm-sale-reportexport-service(/|$)(.*)
            backend:
              serviceName: trm-sale-reportexport-service
              servicePort: 80
          - path: /trm-direct-report-service(/|$)(.*)
            backend:
              serviceName: trm-direct-report-service
              servicePort: 80
          - path: /trm-direct-reportexport-service(/|$)(.*)
            backend:
              serviceName: trm-direct-reportexport-service
              servicePort: 80
          - path: /trm-direct-reportexport-service(/|$)(.*)
            backend:
              serviceName: trm-direct-reportexport-service
              servicePort: 80
          - path: /trm-bg-report-service(/|$)(.*)
            backend:
              serviceName: trm-bg-report-service
              servicePort: 80
          - path: /trm-bg-reportexport-service(/|$)(.*)
            backend:
              serviceName: trm-bg-reportexport-service
              servicePort: 80
          - path: /pcs-outsource-service(/|$)(.*)
            backend:
              serviceName: pcs-outsource-service
              servicePort: 80
          - path: /mcp-proxy-service(/|$)(.*)
            backend:
              serviceName: mcp-proxy-service
              servicePort: 80
          - path: /pas-report-service(/|$)(.*)
            backend:
              serviceName: pas-report-service
              servicePort: 80
          - path: /mcp-proxy(/|$)(.*)
            backend:
              serviceName: mcp-proxy
              servicePort: 80
          - path: /pas-generate-report-service(/|$)(.*)
            backend:
              serviceName: pas-generate-report-service
              servicePort: 80
